--- a/style.css
+++ b/style.css
@@ -1,151 +1,148 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 
-
-*{
-    margin: 0;
-    padding: 0;
-}
-
-.navbar{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 9vh;
-    font-family: "Nunito", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 800;
-    font-style: normal;
-    background-color: #fff;
-    width: 100%;
-    z-index: 1;
-    position: fixed;
-    
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.navbar-left{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-left: 30px;
-    column-gap: 50px;
-}
-.navbar-right{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-right: 30px;
-    column-gap: 40px;
-}
-.hemenbasla{
-    margin-left: 30px;
-    background-color: #1877F2;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 150px;
-    height: 40px;
-    border-radius: 50px;
-}
-.hemenbasla a{
-    color: #fff;
-}
-div a{
-   text-decoration: none;
-   color: #344854;
-   font-size: 14px;
-}
-.mainlogo{
-    padding-right: 40px;
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 9vh;
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 800;
+  font-style: normal;
+  background-color: #fff;
+  width: 100%;
+  z-index: 1;
+  position: fixed;
 }
 
-.section1{
-    height: 850px;
-    background-color: #fff;
-    z-index: 0;
-    padding-top: 9vh;
-    
-}
-.container1{
-    width: 100%;
-    height: 585px;
-    padding-top: 80px;
-    background-color: #0064E0;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
+.navbar-left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 30px;
+  column-gap: 50px;
 }
 
-.description{
-    width: 643px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    font-family: "Nunito", sans-serif;
-    padding-right: 300px;
+.navbar-right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-right: 30px;
+  column-gap: 40px;
 }
 
-.facebook-icon{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    font-family: "Nunito", sans-serif;
-    font-optical-sizing: auto;
-    color: #fff;
-}
-.yazi{
-    font-family: "Nunito", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 600;
-    color: #fff;
-    font-size: 50px;
-    width: 100%;
-    padding-left: 530px;
+.hemenbasla {
+  margin-left: 30px;
+  background-color: #1877f2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 150px;
+  height: 40px;
+  border-radius: 50px;
 }
 
-.sayfa-olustur{
-    width: 180px;
-    height: 60px;
-    background-color: #fff;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: "Nunito", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    margin-left: 80px;
-    margin-top: 40px;
-    
-}
-.des-image{
-    width: 643px;
-    height: 100%;
-    position: relative;
-}
-.video{
-    position: absolute;
-    top: 140px;
-    left: -120px;
-    height: 40vh;
-    
-}
-.video video{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
-.image{
-    padding-top: 10px;
-    z-index: 0;
+.hemenbasla a {
+  color: #fff;
 }
 
+div a {
+  text-decoration: none;
+  color: #344854;
+  font-size: 14px;
+}
 
+.mainlogo {
+  padding-right: 40px;
+}
 
+.section1 {
+  height: 850px;
+  background-color: #fff;
+  z-index: 0;
+  padding-top: 9vh;
+}
+.container1 {
+  width: 100%;
+  height: 585px;
+  padding-top: 80px;
+  background-color: #0064e0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 
+.description {
+  width: 643px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  font-family: "Nunito", sans-serif;
+  padding-right: 300px;
+}
 
+.facebook-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  color: #fff;
+}
 
+.yazi {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  color: #fff;
+  font-size: 50px;
+  width: 100%;
+  padding-left: 530px;
+}
+
+.sayfa-olustur {
+  width: 180px;
+  height: 60px;
+  background-color: #fff;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  margin-left: 80px;
+  margin-top: 40px;
+}
+.des-image {
+  width: 643px;
+  height: 100%;
+  position: relative;
+}
+
+.video {
+  position: absolute;
+  top: 140px;
+  left: -120px;
+  height: 40vh;
+}
+
+.video video {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.image {
+  padding-top: 10px;
+  z-index: 0;
+}
