--- a/style.css
+++ b/style.css
@@ -146,3 +146,128 @@ div a {
   padding-top: 10px;
   z-index: 0;
 }
+
+.section2{
+    height: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    font-family: "Nunito", sans-serif;
+   font-optical-sizing: auto;
+   font-weight: 600;
+   color: #1c2b33;
+   font-size: 35px;
+   background-color: #fff;
+}
+
+.container2{
+    position: absolute;
+    width: 80%;
+    height: 80%;
+    top: 0;
+}
+
+.baslik1{
+    padding-left: 120px;
+    width: 100%;
+    height: 150px;
+}
+.content1{
+    padding-left: 120px;
+    height: 770px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.image2{
+    width: 50%;
+    height: 100%;
+    
+}
+.des-image1{
+    padding-top: 200px;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+
+}
+
+.des1{
+  padding-left: 100px;
+  font-size: 30px;
+}
+.des1 p{
+    font-family: 'Optimistic Text Normal Swap', Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    color: rgb(28,43,51);
+    font-size: 18px;
+    font-style: normal;
+    padding-top: 20px;
+    line-height: 1.5;
+}
+
+.des1-1{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding-top: 35px;
+    
+}
+
+
+.des2{
+    padding-left: 100px;
+}
+
+
+.des3{
+    padding-left: 100px;
+}
+
+.section3{
+    width: 100%;
+    background-color: #fff;
+    height: 546px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.container3{   
+width: 75%;
+height: 40vh;
+background-color: #1C2B33;
+padding-top: 20px;
+border-radius: 10px;
+margin-left: 135px;
+display: flex;
+justify-content: space-around;
+align-items: center;
+}
+
+.cont-text{
+  width: 70%;
+   font-family: "Nunito", sans-serif;
+   font-optical-sizing: auto;
+   font-weight: 600;
+   color: #1c2b33;
+   font-size: 35px;
+   height: 80px;
+   padding-left: 50px;
+}
+
+.container3 {
+  font-family: "Nunito", sans-serif;
+   font-optical-sizing: auto;
+   font-weight: 600;
+   color: #fff;
+   font-size: 20px;
+}
+
+
+
